# aws-data-mesh-utils

./: .gitignore  MANIFEST.in  README.md  data-mesh-cli  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: DataMeshAdmin.md  DataMeshConsumer.md  DataMeshProducer.md  cli.md
examples/: 0_5_setup_account_as.py  0_setup_central_account.py  1_create_data_product.py  2_5_list_pending_access_requests.py  2_consumer_request_access.py  3_5_modify_data_product_access.py  3_grant_data_product_access.py  4_finalize_subscription.py  5_consumer_list_tables.py  example-creds.json  example_utils.py
src/: cli-examples.txt
src/data_mesh_cli/: DataMeshCli.py  command_mappings.json
src/data_mesh_util/: DataMeshAdmin.py  DataMeshConsumer.py  DataMeshMacros.py  DataMeshProducer.py
src/data_mesh_util/lib/: ApiAutomator.py  SubscriberTracker.py  constants.py  utils.py
src/data_mesh_util/resource/: consumer_account_policy.pystache  consumer_mesh_policy.pystache  data_mesh_read_only_policy.pystache  data_mesh_setup_iam_policy.pystache  enable_crawler_role.pystache  glue_ram_optin.pystache  lf_cross_account_tbac.pystache  producer_account_policy.pystache  producer_bucket_policy.pystache  producer_mesh_policy.pystache
