[metadata]
name = aws-data-mesh-utils
version = 1.0
author = Ian Meyers
author_email = meyersi@amazon.co.uk
license = Apache 2.0
description = The AWS Data Mesh Helper library provides automation around the most common tasks that customers need to perform to implement a data mesh architecture on AWS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aws-samples/aws-data-mesh-utils
project_urls =
    Bug Tracker = https://github.com/aws-samples/aws-data-mesh-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
check_format = False
test_mypy = False
test_flake8 = False

[options.packages.find]
where = src